# kira-setup

./: .editorconfig  .travis.yml  CHANGELOG.md  Justfile  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: publish.yml  test.yml
kira_setup/: api.py  cli.py  decorators.py  logging.py
kira_setup/pipelines/: container_registry.py  labels.py  merge_requests.py  project.py  protected.py
