[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"


[tool.poetry]
name = "kira-setup"
version = "0.1.0"
description = "Kira's CLI to setup new projects"
authors = ["sobolevn <mail@sobolevn.me>"]
license = "MIT"
readme = "README.md"

repository = "https://github.com/wemake-services/kira-setup"
homepage = "https://github.com/wemake-services/kira-setup"

keywords = [
  "wemake.services",
  "gitlab-bot",
  "gitlab",
  "kira",
  "kira-bot"
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.poetry.scripts]
kira-setup = "kira_setup.cli:main"

[tool.poetry.dependencies]
python = "^3.6"

python-gitlab = ">=1.8,<3.0"
termcolor = "^1.1"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
wemake-python-styleguide = "^0.14"
safety = "^1.10"
