[project]
name = "kira-setup"
version = "0.1.0"
description = "Kira's CLI to setup new projects"
requires-python = ">=3.11,<3.15"
readme = "README.md"
license = "MIT"
dynamic = ["dependencies", "classifiers"]

authors = [
  { name = "sobolevn", email = "mail@sobolevn.me" },
  { name = "Alexander Kondratev", email = "mail@kondratev.dev" },
]

keywords = [
  "wemake.services",
  "gitlab-bot",
  "gitlab",
  "kira",
  "kira-bot",
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
]


[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python-gitlab = "^8.4"
termcolor = "^3.3"

[tool.poetry.group.dev.dependencies]
mypy = "^2.1"
wemake-python-styleguide = "^1.6"
safety = "^3.8"


[project.scripts]
kira-setup = "kira_setup.cli:main"

[project.urls]
repository = "https://github.com/wemake-services/kira-setup"
homepage = "https://github.com/wemake-services/kira-setup"
